--- a/lab2/notebooks/01-look-at-emnist.ipynb
+++ b/lab2/notebooks/01-look-at-emnist.ipynb
@@ -43,7 +43,9 @@
    ],
    "source": [
     "data = EMNIST()\n",
+    "# Download data.\n",
     "data.prepare_data()\n",
+    "# Split into train, dev, and test. \n",
     "data.setup()\n",
     "print(data)"
    ]
